# redistrict

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.db.yml  docker-compose.yml  pyproject.toml  starting_point.md
docs/: h3_blocks_design.md  h3_leaf_adjacency_design.md  zero_pop_leaf_design.md
output/: blog_outline.md
output/all_states/: alabama_run45_deviations.md  arizona_run46_deviations.md  arkansas_run47_deviations.md  california_run48_deviations.md  colorado_run49_deviations.md  connecticut_run50_deviations.md  florida_run51_deviations.md  georgia_run52_deviations.md  idaho_run53_deviations.md  illinois_run54_deviations.md  indiana_run55_deviations.md  iowa_run56_deviations.md  kansas_run57_deviations.md  kentucky_run58_deviations.md  louisiana_run59_deviations.md  maine_run60_deviations.md  maryland_run61_deviations.md  massachusetts_run62_deviations.md  michigan_run63_deviations.md  minnesota_run64_deviations.md  mississippi_run65_deviations.md  missouri_run66_deviations.md  nebraska_run67_deviations.md  nevada_run68_deviations.md  new_hampshire_run69_deviations.md  new_jersey_run70_deviations.md  new_mexico_run71_deviations.md  north_carolina_run72_deviations.md  ohio_run73_deviations.md  (+13 more)
scripts/: create_block_groups.py  create_counties.py  create_tracts.py  run_all_states.py  run_h3_state.py  run_ny_experiments.py  run_ny_run37_repro.py  run_ny_uniform_hq.py  run_ny_uniform_variants.py  run_ny_water_penalty.py  run_tract_metis.py  run_two_pass_metis.py
tests/: test_cli.py  test_graph.py  test_h3_graph.py  test_tract_metis.py
(+47 files in other folders)
